--- a/index.html
+++ b/index.html
@@ -1336,7 +1336,7 @@
 
 					<div class="tab-pane tab-content" id="about">
 						<h2>About <small>open source Pandacoin wallet</small></h2>
-						<p>Version 1.4</p>
+						<p>Version 2.0.3</p>
 						<p>Compatible with Pandacoin</p>
                         <p><a href="https://github.com/DigitalPandacoin/coinbin">https://github.com/DigitalPandacoin/coinbin</a></p>
 						<p>Forked from <a href="https://coinb.in">https://coinb.in"</a></p>
@@ -1370,7 +1370,7 @@
                                     <option value="zeitcoin_mainnet" rel="0x33;0xb3;0x05;0x488b21e;0x488ade4;cryptoid.info_zeitcoin;cryptoid.info_zeitcoin">Zeitcoin (mainnet)</option>
                                     <option value="digibyte_mainnet" rel="0x1e;0x80;0x3f;0x488b21e;0x488ade4;digiexplorer.info;digiexplorer.info">DigiByte (mainnet)</option>
 									<option value="litecoin_mainnet" rel="0x30;0xb0;0x32;0x019da462;0x019d9cfe;blockcypher_litecoin;blockcypher_litecoin">Litecoin (mainnet)</option>
-									<option value="dogecoin_mainnet" rel="0x1e;0x9e;0x16;0x0827421e;0x089944e4;blockcypher_dogecoin;blockcypher_dogecoin">Dogecoin (mainnet)</option>
+									<option value="dogecoin_mainnet" rel="0x1e;0x9e;0x16;0x0827421e;0x089944e4;blockcypher_dogecoin;blockchair_dogecoin">Dogecoin (mainnet)</option>
 									<option value="carboncoin_mainnet" rel="0x2f;0xaf;0x05;0x488b21e;0x488ade4;cryptoid.info_carboncoin;cryptoid.info_carboncoin">Carboncoin (mainnet)</option>
 									<option value="shadowcash_mainnet" rel="0x3f;0xbf;0x7d;0xee80286a;0xee8031e8;shadowcash.host;shadowcash.host">ShadowCash (mainnet)</option>
 
@@ -1430,16 +1430,14 @@
                                     <option value="cryptoid.info_zeitcoin">Zeitcoin (mainnet)</option>
                                     <option value="blockcypher_litecoin"> Blockcypher.com (Litecoin)</option>
                                     <option value="digiexplorer.info"> DigiExplorer.info (DigiByte)</option>
-									<option value="blockcypher_dogecoin"> Blockcypher.com (Dogecoin)</option>
 									<option value="blockchair_bitcoinmainnet"> Blockchair.com (Bitcoin mainnet)</option>
 									<option value="blockchair_litecoin"> Blockchair.com (Litecoin)</option>
-									<option value="blockchair_dogecoin"> Blockchair.com (Dogecoin)</option>
+									<option value="blockcypher_dogecoin"> Blockcypher.com (Dogecoin)</option>
 									<option value="chain.so_bitcoinmainnet"> Chain.so (Bitcoin mainnet)</option>
 									<option value="cryptoid.info_cypherfunk"> Cryptoid.info (Cypherfunk)</option>
                                     <option value="chain.so_bitcoinmainnet"> Chain.so (Pandacoin mainnet)</option>
 									<option value="blockcypher_bitcoinmainnet"> Blockcypher.com (Pandacoin mainnet)</option>
 									<option value="chain.so_litecoin"> Chain.so (Litecoin)</option>
-									<option value="chain.so_dogecoin"> Chain.so (Dogecoin)</option>
 									<option value="cryptoid.info_carboncoin"> Cryptoid.info (Carboncoin)</option>
 									<option value="shadowcash.host"> ShadowCash</option>
 
@@ -1459,14 +1457,12 @@
                                     <option value="blockcypher_bitcoinmainnet"> Blockcypher.com (Bitcoin mainnet)</option>
                                     <option value="digiexplorer.info"> DigiExplorer.info (DigiByte)</option>
 									<option value="blockcypher_litecoin"> Blockcypher.com (Litecoin)</option>
-									<option value="blockcypher_dogecoin"> Blockcypher.com (Dogecoin)</option>
 									<option value="blockchair_bitcoinmainnet"> Blockchair.com (Bitcoin mainnet)</option>
 									<option value="blockchair_litecoin"> Blockchair.com (Litecoin)</option>
 									<option value="blockchair_dogecoin"> Blockchair.com (Dogecoin)</option>
 									<option value="chain.so_bitcoinmainnet"> Chain.so (Bitcoin mainnet)</option>
                                     <option value="cryptoid.info_cypherfunk">Cryptoid.info (Cypherfunk)</option>
 									<option value="chain.so_litecoin"> Chain.so (Litecoin)</option>
-									<option value="chain.so_dogecoin"> Chain.so (Dogecoin)</option>
 									<option value="cryptoid.info_carboncoin"> Cryptoid.info (Carboncoin)</option>
 									<option value="shadowcash.host"> ShadowCash</option>
 								</select>
@@ -1492,7 +1488,7 @@
 
 		<div id="footer">
 			<div class="container text-right">
-	        		<p class="text-muted">Version 2.0.2</p>
+	        		<p class="text-muted">Version  2.0.3</p>
 			</div>
 		</div>
 
